<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/login_page"
            android:layout_marginLeft="65dp"
            android:contentDescription="@string/login_image"
            android:id="@+id/imageView" />


<EditText android:id="@+id/emailField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:contentDescription="@string/email"
    android:hint="@string/email_hint" >

    <requestFocus></requestFocus>
</EditText>

<EditText android:id="@+id/passwordField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/password_hint"
    android:contentDescription="@string/password"
    android:inputType="textPassword"></EditText>

<Button android:id="@+id/loginButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/login"
    android:text="@string/login_button_label"></Button>

<TextView android:id="@+id/signUpText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:contentDescription="@string/sign_up_text"
    android:text="@string/sign_up_text"></TextView>

    </LinearLayout>



</RelativeLayout>
