<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".SignUpActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/login_page"
        android:layout_marginLeft="65dp"
        android:contentDescription="@string/login_image"
        android:id="@+id/imageView" />

<EditText android:id="@+id/emailField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/email_hint"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:hint="@string/email_hint" >

    <requestFocus></requestFocus>
</EditText>

<EditText android:id="@+id/passwordField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:contentDescription="@string/email_hint"
    android:inputType="textPassword"
    android:hint="@string/password_hint"></EditText>

<Button android:id="@+id/signupButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/sign_up_button_label"
    android:text="@string/sign_up_button_label"></Button>
    </LinearLayout>

</RelativeLayout>